# python-starter

./: .dockerignore  .env.sample  README.md  app.py  pyproject.toml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  pyproject.toml
.github/: dependabot.yml
sandbox/: count_token.py  sample.py
sandbox/azure/: main.py
sandbox/llama_index/: starter.py
sandbox/llama_index/data/: Steve_Jobs_Biography.txt
sandbox/openai/: main.py
