[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["shoji-k"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^24.2.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
